upload all files

--- a/products/passivation/yellow-6-passivation-on-zinc.html
+++ b/products/passivation/yellow-6-passivation-on-zinc.html
@@ -349,34 +349,98 @@
         </div>
       </section>
 
-      <!-- Process steps -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="proc_1">ชิ้นงานชุบซิงค์เรียบร้อยแล้ว</li>
-            <li data-i18n-key="proc_2">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_3">จุ่มซิงค์โครเมติ้ง หรือกรดดินประสิว 1% 3–15 วินาที</li>
-            <li data-i18n-key="proc_4">ล้างน้ำ</li>
-            <li data-i18n-key="proc_5">จุ่มสีรุ้งน้ำ 5006 10–20 วินาที</li>
-            <li data-i18n-key="proc_6">ล้างน้ำ</li>
-            <li data-i18n-key="proc_7">ล้างน้ำอีกครั้ง</li>
-            <li data-i18n-key="proc_8">เป่าลมหรืออบให้แห้ง</li>
-          </ul>
-        </div>
-      </section>
+<!-- Process steps -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="proc_1">
+        ชิ้นงานชุบซิงค์เรียบร้อยแล้ว: ขั้นตอนแรกคือการเตรียมชิ้นงานที่ผ่านการชุบซิงค์มาแล้ว ซึ่งชั้นซิงค์นี้เป็นพื้นฐานสำคัญสำหรับปฏิกิริยาโครเมทและการสร้างฟิล์มป้องกันที่ยึดเกาะได้ดีและทนทาน
+      </li>
+      <li data-i18n-key="proc_2">
+        ล้างน้ำสะอาด: ล้างชิ้นงานด้วยน้ำสะอาดทันทีหลังการชุบซิงค์เพื่อกำจัดสารเคมีตกค้างจากกระบวนการชุบซิงค์ออกให้หมดจด ช่วยลดการปนเปื้อนเข้าสู่บ่อโครเมทและทำให้การเกิดฟิล์มสีรุ้งสม่ำเสมอ
+      </li>
+      <li data-i18n-key="proc_3">
+        จุ่มซิงค์โครเมติ้ง หรือกรดดินประสิว 1% 3–15 วินาที: ขั้นตอนนี้เรียกว่าการกระตุ้นผิว Activation เพื่อให้ผิวซิงค์พร้อมสำหรับการเคลือบโครเมท โดยใช้กรดเจือจาง เช่น กรดไนตริก 1% ช่วยขจัดคราบออกไซด์ Oxide Layer ที่เกาะบนผิวออก ทำให้ปฏิกิริยาโครเมทในขั้นตอนต่อไปเกิดขึ้นได้อย่างสม่ำเสมอและทั่วถึง
+      </li>
+      <li data-i18n-key="proc_4">
+        ล้างน้ำ: ล้างชิ้นงานด้วยน้ำสะอาดอีกครั้งหลังการกระตุ้นผิว เพื่อกำจัดกรดที่ตกค้างออกทั้งหมด ลดโอกาสการปนเปื้อนและการเพี้ยนของเฉดสีในขั้นตอนถัดไป
+      </li>
+      <li data-i18n-key="proc_5">
+        จุ่มสีรุ้งน้ำ 5006 10–20 วินาที: นี่คือขั้นตอนหลักของการเคลือบโครเมทสีรุ้ง โดยการจุ่มชิ้นงานลงในน้ำยาเคมี “สีรุ้งน้ำ 5006” เป็นเวลา 10–20 วินาที ปฏิกิริยาที่เกิดขึ้นจะสร้างชั้นโครเมทที่ให้สีตั้งแต่เหลืองทองไปจนถึงสีรุ้งสวยงามบนผิวซิงค์อย่างสม่ำเสมอ
+      </li>
+      <li data-i18n-key="proc_6">
+        ล้างน้ำ: ล้างน้ำยาโครเมทส่วนเกินออกด้วยน้ำสะอาดทันทีหลังจุ่ม เพื่อให้ฟิล์มที่ก่อตัวแล้วคงที่และสะอาด ปราศจากคราบ
+      </li>
+      <li data-i18n-key="proc_7">
+        ล้างน้ำอีกครั้ง: ล้างซ้ำอีกครั้งเพื่อความมั่นใจว่าไม่มีสารเคมีหลงเหลืออยู่บนผิวชิ้นงาน ช่วยลดคราบน้ำและความไม่สม่ำเสมอของสีในระยะยาว
+      </li>
+      <li data-i18n-key="proc_8">
+        เป่าลมหรืออบให้แห้ง: ทำให้แห้งด้วยลมหรือการอบ ควรใช้การเป่าลมเพื่อให้แห้งสนิทโดยไม่ทำลายชั้นโครเมทที่เคลือบไว้ และควบคุมอุณหภูมิไม่ให้สูงเกินไปเพื่อคงเฉดสีและการยึดเกาะของฟิล์ม
+      </li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Safety -->
-      <section id="safety" class="reveal section-block" aria-labelledby="safety-h">
-        <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัย & กฎระเบียบ</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="safe_ppe">Cr6 เป็นอันตราย: สวมถุงมือ/แว่น/หน้ากาก และทำงานในพื้นที่ระบายอากาศดี</li>
-            <li data-i18n-key="safe_waste">จัดการน้ำทิ้ง/ตะกอนตามข้อกำหนดท้องถิ่น และข้อกำกับ RoHS/REACH</li>
-            <li data-i18n-key="safe_alt">หากต้องตาม RoHS/REACH อย่างเข้มงวด ให้พิจารณากระบวนการโครเมียม 3+ เป็นทางเลือก</li>
-          </ul>
-        </div>
-      </section>
+<!-- Safety -->
+<section id="safety" class="reveal section-block" aria-labelledby="safety-h">
+  <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัย & กฎระเบียบ</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="safe_ppe">
+        Cr6 เป็นอันตราย ต้องสวมถุงมือที่ทนสารเคมี แว่นตานิรภัย และหน้ากากป้องกันไอระเหยระหว่างทำงาน
+        ปฏิบัติงานในพื้นที่ที่มีการระบายอากาศดี ลดการรับสัมผัสไอระเหยและหมอกสารเคมี
+      </li>
+      <li data-i18n-key="safe_waste">
+        จัดการน้ำทิ้งและตะกอนตามข้อกำหนดของหน่วยงานท้องถิ่น
+        รวมถึงปฏิบัติตามข้อกำกับด้านสิ่งแวดล้อมและความปลอดภัยที่เกี่ยวข้องกับ RoHS และ REACH อย่างเคร่งครัด
+      </li>
+      <li data-i18n-key="safe_alt">
+        หากต้องตาม RoHS และ REACH อย่างเข้มงวด ให้พิจารณากระบวนการโครเมียม 3 พลัสเป็นทางเลือก
+        ลดความเสี่ยงและเอื้อให้สอดคล้องข้อกำหนดได้ง่ายขึ้น
+      </li>
+    </ul>
+  </div>
+</section>
+
+<!-- Troubleshooting (ใหม่ เพิ่มเติมตามเนื้อหา) -->
+<section id="troubleshoot" class="reveal section-block" aria-labelledby="trouble-h">
+  <h2 id="trouble-h" class="section" data-i18n-key="trouble_h">ปัญหาที่พบบ่อยในการทำโครเมทสีรุ้ง</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="trouble_1">
+        สีไม่สม่ำเสมอ หรือสีเพี้ยน
+        ปัญหา ชิ้นงานมีสีไม่สม่ำเสมอ เช่น มีสีแดงปน สีซีดจาง หรือมีจุดด่าง
+        สาเหตุ การเตรียมผิวไม่ดี มีคราบไขมันหรือสิ่งสกปรกหลงเหลืออยู่บนผิวซิงค์ ค่า pH ของน้ำยาไม่เหมาะสม ต่ำหรือสูงเกินสมดุล เวลาจุ่มไม่พอทำให้ปฏิกิริยาไม่สมบูรณ์
+        วิธีแก้ไข ทำความสะอาดชิ้นงานให้ทั่วถึงก่อนเข้าสู่กระบวนการ ปรับ pH ของน้ำยาให้อยู่ในช่วงที่เหมาะสมตามคำแนะนำ เพิ่มเวลาจุ่มในน้ำยาโครเมทให้พอเหมาะ
+      </li><br>
+      <li data-i18n-key="trouble_2">
+        ชั้นโครเมทหลุดลอกง่าย
+        ปัญหา ชั้นเคลือบโครเมทหลุดออกได้ง่ายเมื่อขัดถูหรือสัมผัส
+        สาเหตุ ความหนาของชั้นซิงค์ไม่พอ ชั้นซิงค์ที่บางเกินไปไม่สามารถรองรับชั้นโครเมทได้ดี การอบแห้งด้วยความร้อนสูงทำให้ชั้นโครเมทเปราะบาง
+        วิธีแก้ไข ตรวจสอบความหนาของชั้นซิงค์ แนะนำอย่างน้อย 5 ไมครอน ใช้วิธีเป่าลมแทนการอบที่อุณหภูมิสูง ควบคุมเงื่อนไขให้ไม่ทำลายฟิล์ม
+      </li><br>
+      <li data-i18n-key="trouble_3">
+        เกิดคราบขาว
+        ปัญหา มีคราบขาวเกิดขึ้นบนผิวชิ้นงานหลังการทำโครเมท
+        สาเหตุ ล้างน้ำยาไม่สะอาด น้ำยาโครเมทยังคงค้างบนผิว แช่น้ำนานเกินไปหลังจุ่มโครเมทจนฟิล์มอ่อนตัว
+        วิธีแก้ไข ล้างน้ำให้สะอาดและรวดเร็วทันทีหลังจุ่ม หลีกเลี่ยงการแช่ชิ้นงานในน้ำนานเกินไป จัดลำดับขั้นตอนให้กระชับ
+      </li><br>
+      <li data-i18n-key="trouble_4">
+        น้ำยามีการตกตะกอน
+        ปัญหา เกิดตะกอนในน้ำยาโครเมท ทำให้ประสิทธิภาพการเคลือบลดลง
+        สาเหตุ ใช้น้ำที่ไม่บริสุทธิ์ในการผสมหรือปรับเติม น้ำประปามีสิ่งเจือปน นำสิ่งแปลกปลอมจากขั้นตอนก่อนหน้าปนเปื้อนลงบ่อ
+        วิธีแก้ไข ใช้น้ำ DI สำหรับผสมและเติมทุกครั้ง ล้างชิ้นงานให้สะอาดหมดจดก่อนนำมาจุ่มโครเมท ควบคุมความสะอาดของสายการผลิต
+      </li><br>
+      <li data-i18n-key="trouble_5">
+        ปริมาณสารเคมีลดลงเร็ว
+        ปัญหา ต้องเติมสารเคมีในน้ำยาบ่อยครั้งกว่าปกติ
+        สาเหตุ การจุ่มงานปริมาณมากในเวลาสั้น ทำให้สารออกฤทธิ์ถูกใช้ไปอย่างรวดเร็ว
+        วิธีแก้ไข วางแผนการผลิตให้เหมาะสมกับปริมาตรของบ่อ ดำเนินการไทเทรตเพื่อติดตามความเข้มข้น และปรับเติมให้ถูกต้องตามปริมาณที่เหมาะสม
+      </li>
+    </ul>
+  </div>
+</section>
 
     </article>
   </main>
@@ -472,20 +536,27 @@
         mix_h:"ตัวอย่างการผสม",
         mix_p1:"ต้องการผสมน้ำยา 100 ลิตร: ตวงสีรุ้งน้ำ 5006 = 1 ลิตร + เติมน้ำ = 99 ลิตร กวนให้เข้ากัน แล้วทดสอบชิ้นงาน หากสีเข้มไปให้เติมน้ำ หากอ่อนไปให้เพิ่มสี",
 
-        process_h:"ขั้นตอนการทำงาน",
-        proc_1:"ชิ้นงานชุบซิงค์เรียบร้อยแล้ว",
-        proc_2:"ล้างน้ำสะอาด",
-        proc_3:"จุ่มซิงค์โครเมติ้ง หรือกรดดินประสิว 1% 3–15 วินาที",
-        proc_4:"ล้างน้ำ",
-        proc_5:"จุ่มสีรุ้งน้ำ 5006 10–20 วินาที",
-        proc_6:"ล้างน้ำ",
-        proc_7:"ล้างน้ำอีกครั้ง",
-        proc_8:"เป่าลมหรืออบให้แห้ง",
+    "process_h": "ขั้นตอนการทำงาน",
+    "proc_1": "ชิ้นงานชุบซิงค์เรียบร้อยแล้ว: ขั้นตอนแรกคือการเตรียมชิ้นงานที่ผ่านการชุบซิงค์มาแล้ว ซึ่งชั้นซิงค์นี้เป็นพื้นฐานสำคัญสำหรับปฏิกิริยาโครเมทและการสร้างฟิล์มป้องกันที่ยึดเกาะได้ดีและทนทาน",
+    "proc_2": "ล้างน้ำสะอาด: ล้างชิ้นงานด้วยน้ำสะอาดทันทีหลังการชุบซิงค์เพื่อกำจัดสารเคมีตกค้างจากกระบวนการชุบซิงค์ออกให้หมดจด ช่วยลดการปนเปื้อนเข้าสู่บ่อโครเมทและทำให้การเกิดฟิล์มสีรุ้งสม่ำเสมอ",
+    "proc_3": "จุ่มซิงค์โครเมติ้ง หรือกรดดินประสิว 1% 3–15 วินาที: ขั้นตอนนี้เรียกว่าการกระตุ้นผิว Activation เพื่อให้ผิวซิงค์พร้อมสำหรับการเคลือบโครเมท โดยใช้กรดเจือจาง เช่น กรดไนตริก 1% ช่วยขจัดคราบออกไซด์ Oxide Layer ที่เกาะบนผิวออก ทำให้ปฏิกิริยาโครเมทในขั้นตอนต่อไปเกิดขึ้นได้อย่างสม่ำเสมอและทั่วถึง",
+    "proc_4": "ล้างน้ำ: ล้างชิ้นงานด้วยน้ำสะอาดอีกครั้งหลังการกระตุ้นผิว เพื่อกำจัดกรดที่ตกค้างออกทั้งหมด ลดโอกาสการปนเปื้อนและการเพี้ยนของเฉดสีในขั้นตอนถัดไป",
+    "proc_5": "จุ่มสีรุ้งน้ำ 5006 10–20 วินาที: นี่คือขั้นตอนหลักของการเคลือบโครเมทสีรุ้ง โดยการจุ่มชิ้นงานลงในน้ำยาเคมี “สีรุ้งน้ำ 5006” เป็นเวลา 10–20 วินาที ปฏิกิริยาที่เกิดขึ้นจะสร้างชั้นโครเมทที่ให้สีตั้งแต่เหลืองทองไปจนถึงสีรุ้งสวยงามบนผิวซิงค์อย่างสม่ำเสมอ",
+    "proc_6": "ล้างน้ำ: ล้างน้ำยาโครเมทส่วนเกินออกด้วยน้ำสะอาดทันทีหลังจุ่ม เพื่อให้ฟิล์มที่ก่อตัวแล้วคงที่และสะอาด ปราศจากคราบ",
+    "proc_7": "ล้างน้ำอีกครั้ง: ล้างซ้ำอีกครั้งเพื่อความมั่นใจว่าไม่มีสารเคมีหลงเหลืออยู่บนผิวชิ้นงาน ช่วยลดคราบน้ำและความไม่สม่ำเสมอของสีในระยะยาว",
+    "proc_8": "เป่าลมหรืออบให้แห้ง: ทำให้แห้งด้วยลมหรือการอบ ควรใช้การเป่าลมเพื่อให้แห้งสนิทโดยไม่ทำลายชั้นโครเมทที่เคลือบไว้ และควบคุมอุณหภูมิไม่ให้สูงเกินไปเพื่อคงเฉดสีและการยึดเกาะของฟิล์ม",
 
-        safety_h:"ความปลอดภัย & กฎระเบียบ",
-        safe_ppe:"Cr6 เป็นอันตราย: สวมถุงมือ/แว่น/หน้ากาก และทำงานในพื้นที่ระบายอากาศดี",
-        safe_waste:"จัดการน้ำทิ้ง/ตะกอนตามข้อกำหนดท้องถิ่น และข้อกำกับ RoHS/REACH",
-        safe_alt:"หากต้องตาม RoHS/REACH อย่างเข้มงวด ให้พิจารณากระบวนการโครเมียม 3+ เป็นทางเลือก",
+    "safety_h": "ความปลอดภัย & กฎระเบียบ",
+    "safe_ppe": "Cr6 เป็นอันตราย ต้องสวมถุงมือที่ทนสารเคมี แว่นตานิรภัย และหน้ากากป้องกันไอระเหยระหว่างทำงาน ปฏิบัติงานในพื้นที่ที่มีการระบายอากาศดี ลดการรับสัมผัสไอระเหยและหมอกสารเคมี",
+    "safe_waste": "จัดการน้ำทิ้งและตะกอนตามข้อกำหนดของหน่วยงานท้องถิ่น รวมถึงปฏิบัติตามข้อกำกับด้านสิ่งแวดล้อมและความปลอดภัยที่เกี่ยวข้องกับ RoHS และ REACH อย่างเคร่งครัด",
+    "safe_alt": "หากต้องตาม RoHS และ REACH อย่างเข้มงวด ให้พิจารณากระบวนการโครเมียม 3 พลัสเป็นทางเลือก ลดความเสี่ยงและเอื้อให้สอดคล้องข้อกำหนดได้ง่ายขึ้น",
+
+    "trouble_h": "ปัญหาที่พบบ่อยในการทำโครเมทสีรุ้ง",
+    "trouble_1": "สีไม่สม่ำเสมอ หรือสีเพี้ยน ปัญหา ชิ้นงานมีสีไม่สม่ำเสมอ เช่น มีสีแดงปน สีซีดจาง หรือมีจุดด่าง สาเหตุ การเตรียมผิวไม่ดี มีคราบไขมันหรือสิ่งสกปรกหลงเหลืออยู่บนผิวซิงค์ ค่า pH ของน้ำยาไม่เหมาะสม ต่ำหรือสูงเกินสมดุล เวลาจุ่มไม่พอทำให้ปฏิกิริยาไม่สมบูรณ์ วิธีแก้ไข ทำความสะอาดชิ้นงานให้ทั่วถึงก่อนเข้าสู่กระบวนการ ปรับ pH ของน้ำยาให้อยู่ในช่วงที่เหมาะสมตามคำแนะนำ เพิ่มเวลาจุ่มในน้ำยาโครเมทให้พอเหมาะ",
+    "trouble_2": "ชั้นโครเมทหลุดลอกง่าย ปัญหา ชั้นเคลือบโครเมทหลุดออกได้ง่ายเมื่อขัดถูหรือสัมผัส สาเหตุ ความหนาของชั้นซิงค์ไม่พอ ชั้นซิงค์ที่บางเกินไปไม่สามารถรองรับชั้นโครเมทได้ดี การอบแห้งด้วยความร้อนสูงทำให้ชั้นโครเมทเปราะบาง วิธีแก้ไข ตรวจสอบความหนาของชั้นซิงค์ แนะนำอย่างน้อย 5 ไมครอน ใช้วิธีเป่าลมแทนการอบที่อุณหภูมิสูง ควบคุมเงื่อนไขให้ไม่ทำลายฟิล์ม",
+    "trouble_3": "เกิดคราบขาว ปัญหา มีคราบขาวเกิดขึ้นบนผิวชิ้นงานหลังการทำโครเมท สาเหตุ ล้างน้ำยาไม่สะอาด น้ำยาโครเมทยังคงค้างบนผิว แช่น้ำนานเกินไปหลังจุ่มโครเมทจนฟิล์มอ่อนตัว วิธีแก้ไข ล้างน้ำให้สะอาดและรวดเร็วทันทีหลังจุ่ม หลีกเลี่ยงการแช่ชิ้นงานในน้ำนานเกินไป จัดลำดับขั้นตอนให้กระชับ",
+    "trouble_4": "น้ำยามีการตกตะกอน ปัญหา เกิดตะกอนในน้ำยาโครเมท ทำให้ประสิทธิภาพการเคลือบลดลง สาเหตุ ใช้น้ำที่ไม่บริสุทธิ์ในการผสมหรือปรับเติม น้ำประปามีสิ่งเจือปน นำสิ่งแปลกปลอมจากขั้นตอนก่อนหน้าปนเปื้อนลงบ่อ วิธีแก้ไข ใช้น้ำ DI สำหรับผสมและเติมทุกครั้ง ล้างชิ้นงานให้สะอาดหมดจดก่อนนำมาจุ่มโครเมท ควบคุมความสะอาดของสายการผลิต",
+    "trouble_5": "ปริมาณสารเคมีลดลงเร็ว ปัญหา ต้องเติมสารเคมีในน้ำยาบ่อยครั้งกว่าปกติ สาเหตุ การจุ่มงานปริมาณมากในเวลาสั้น ทำให้สารออกฤทธิ์ถูกใช้ไปอย่างรวดเร็ว วิธีแก้ไข วางแผนการผลิตให้เหมาะสมกับปริมาตรของบ่อ ดำเนินการไทเทรตเพื่อติดตามความเข้มข้น และปรับเติมให้ถูกต้องตามปริมาณที่เหมาะสม",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -529,20 +600,27 @@
         mix_h:"Mixing example",
         mix_p1:"To make 100 L: Chromate 5006 = 1 L + water = 99 L. Mix well and test. If too dark, add water; if too light, add chromate.",
 
-        process_h:"Process steps",
-        proc_1:"Zinc-plated parts ready.",
-        proc_2:"Rinse well.",
-        proc_3:"Dip in zinc chromating or 1% HNO₃ for 3–15 s.",
-        proc_4:"Rinse.",
-        proc_5:"Dip in Chromate 5006 for 10–20 s.",
-        proc_6:"Rinse.",
-        proc_7:"Final rinse.",
-        proc_8:"Blow or oven dry.",
+    "process_h": "Process Steps",
+    "proc_1": "Zinc-plated workpiece prepared: Begin with parts that have already been zinc plated. The zinc layer is the critical foundation for the chromate reaction and for building a protective film with strong adhesion and durability.",
+    "proc_2": "Rinse in clean water: Immediately rinse the parts after zinc plating to remove any residual plating chemicals. This minimizes contamination of the chromate bath and promotes a uniform iridescent film.",
+    "proc_3": "Dip in zinc chromating or 1% nitric acid for 3–15 seconds: This activation step prepares the zinc surface for chromating. A mild acid, such as 1% nitric acid, removes the oxide layer so the subsequent chromate reaction proceeds evenly and thoroughly across the surface.",
+    "proc_4": "Rinse: Rinse again with clean water after activation to remove any remaining acid, reducing contamination risk and preventing color shift in the next step.",
+    "proc_5": "Dip in Rainbow Water 5006 for 10–20 seconds: This is the core iridescent chromate step. Immerse the part in the Rainbow Water 5006 solution for 10–20 seconds. The reaction forms a chromate film that exhibits hues from golden yellow to iridescent colors uniformly on the zinc surface.",
+    "proc_6": "Rinse: Immediately rinse off excess chromate solution with clean water so the formed film remains stable and clean, free of residues.",
+    "proc_7": "Rinse again: Perform a second rinse to ensure no chemicals remain on the surface, reducing water marks and long-term color non-uniformity.",
+    "proc_8": "Blow or oven dry: Dry with air flow or low-temperature oven. Prefer air blowing to achieve complete drying without damaging the chromate film, and keep temperature moderate to preserve hue and adhesion.",
 
-        safety_h:"Safety & regulations",
-        safe_ppe:"Cr6 is hazardous: wear gloves/goggles/respirator; ensure ventilation.",
-        safe_waste:"Dispose wastewater/sludge per local law and RoHS/REACH guidance.",
-        safe_alt:"For strict RoHS/REACH programs, consider Cr3 processes as an alternative.",
+    "safety_h": "Safety & Compliance",
+    "safe_ppe": "Hexavalent chromium is hazardous. Wear chemical resistant gloves, safety goggles, and an organic vapor respirator while working. Operate in a well ventilated area to reduce exposure to vapors and mists.",
+    "safe_waste": "Handle wastewater and sludge in accordance with local regulations, and comply with environmental and safety requirements under RoHS and REACH.",
+    "safe_alt": "When strict RoHS and REACH conformity is required, consider a trivalent chromium process as an alternative to reduce risk and facilitate compliance.",
+
+    "trouble_h": "Common Issues in Yellow or Iridescent Chromate",
+    "trouble_1": "Non uniform or off shade color. Problem Parts show uneven color such as reddish tint, fading, or spotting. Causes Inadequate surface preparation with residual oils or soils on zinc, bath pH out of range either too low or too high, and insufficient dwell time that leaves the reaction incomplete. Fix Thoroughly clean parts before chromating, adjust bath pH to the recommended, and increase dwell time in the chromate bath to an appropriate level.",
+    "trouble_2": "Chromate film peels easily. Problem The conversion film comes off easily when rubbed or contacted. Causes Zinc thickness is insufficient so the film has poor support, and high temperature drying embrittles the film. Fix Verify zinc thickness with a target of at least 5 µm, use air blowing instead of high temperature oven drying, and control conditions to avoid damaging the film.",
+    "trouble_3": "White stain formation. Problem White stains appear on the surface after chromating. Causes Poor rinsing leaves chromate residues on the surface, and prolonged soaking in water after chromate weakens the film. Fix Rinse promptly and thoroughly right after chromating, avoid long water soaks, and keep the sequence tight.",
+    "trouble_4": "Bath precipitation. Problem Precipitates form in the chromate bath and reduce coating performance. Causes Non DI water used for make up or replenishment introduces ions, and foreign matter from prior steps contaminates the bath. Fix Use DI water exclusively for make up and additions, clean parts thoroughly before chromating, and maintain cleanliness along the line.",
+    "trouble_5": "Rapid chemical depletion. Problem Frequent additions are required more than normal. Causes High loading in a short period consumes active species rapidly. Fix Plan production relative to bath volume, perform routine titration to track concentration, and replenish accurately to the proper level.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
