--- a/products/polishing/stainless-electropolishing-solution.html
+++ b/products/polishing/stainless-electropolishing-solution.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/polishing/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">EP 8511 — น้ำยากัดเงาสแตนเลส (Electropolishing)</h1>
       <p data-i18n-key="hero_tagline">หน้าต่างการทำงานกว้าง (50–80 °C, 4–9 V, 15–45 A/dm²), ผิวเงาแบบกระจก, ปลอดฮาโลเจน/โครเมต, ขั้นตอนและความปลอดภัย</p>
