--- a/products/polishing/zinc-electropolishing-solution.html
+++ b/products/polishing/zinc-electropolishing-solution.html
@@ -203,7 +203,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/polishing/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">ACITEK MZ-52: จุ่มเงาบนซิ้งค์</h1>
       <p data-i18n-key="hero_tagline">ล้างออกไซด์ เพิ่มเงา รองรับซิ้งค์ฉีด ใช้งาน 70–80°C 2–3 นาที พร้อมก่อนชุบ</p>
